policy/core.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-kube-node-lease-all
  namespace: kube-node-lease
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-kube-public-all
  namespace: kube-public
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: deny-kube-system-all
#   namespace: kube-system
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-local-path-storage-all
  namespace: local-path-storage
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
